suites/fs: unify/reuse common overrides
Goal is to reduce arbitrary differences between fs suites.

Note:
  o fs/{multiclient,multifs,recovery,snaps,standbyreplay} now use basic/overrides/whitelist_wrongly_marked_down.yaml.
  o fs/{snaps,standbyreplay} now use basic/overrides/debug.yaml.

Signed-off-by: Patrick Donnelly <batrick@batbytes.com>

--- a/suites/fs/basic/overrides/debug.yaml
+++ b/suites/fs/basic/overrides/debug.yaml
@@ -4,9 +4,6 @@ overrides:
       mds:
         debug ms: 1
         debug mds: 20
-      client.0:
-        debug ms: 1
-        debug client: 20
-      client.1:
+      client:
         debug ms: 1
         debug client: 20
