--- a/suites/fs/traceless/tasks/cfuse_workunit_suites_blogbench.yaml
+++ b/suites/fs/traceless/tasks/cfuse_workunit_suites_blogbench.yaml
@@ -1,5 +1,1 @@
-tasks:
-- workunit:
-    clients:
-      all:
-        - suites/blogbench.sh
+../../basic/tasks/cfuse_workunit_suites_blogbench.yaml
